--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         style="background-image: url(&quot;https://manager.digitavolo.com/uploads/202106/uxczo3afskjyiyfno2ay_resized.jpg&quot;);">
         <div class="PlaceIntrostyle__StyledLogo-sc-16htm7n-1 gOtkfg"><img
             src="https://manager.digitavolo.com/uploads/202106/3dpqxnlhiydhmktpcagz_resized.png"></div>
-        <div class="PlaceIntrostyle__StyledIntroContent-sc-16htm7n-2 Fgitj"><a (clcik)="goToMenu()"><button type="button"
+        <div class="PlaceIntrostyle__StyledIntroContent-sc-16htm7n-2 Fgitj"><a href="https://michel-98.github.io/mambo/menu"><button type="button"
               class="Buttonstyle__StyledButton-sc-7xq3hv-0 eqntYa"><span>Scopri il menu</span></button></a><a href="/">
             <div class="MadeWidthstyle__StyledMadeWith-sc-13k5dth-0 kmDvru block"><span>made width</span> <svg
                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 360.77 70.72">
